@@ -1,5 +1,8 @@
 2009-10-24  Andreas Schwab  <schwab@linux-m68k.org>
 
+	* lisp.h (FIXNUM_OVERFLOW_P): Fix last change to handle unsigned
+	types again.
+
 	* sysdep.c (procfs_ttyname): Fix sprintf format to match argument
 	type.
 	(system_process_attributes): Likewise.
